# hotel-aggregator-service

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
hotel_service/: asgi.py  settings.py  urls.py  wsgi.py
hotel_service/hotels/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
hotel_service/hotels/migrations/: 0001_initial.py  0002_alter_hotel_meta_hotel_delete_metahotel.py  0002_hotelbindinghistory.py
hotel_service/metahotels/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
hotel_service/metahotels/migrations/: 0001_initial.py
scripts/: generator.py
